# fluid_sim

./: .gitignore  Cargo.toml  ReadMe.md  profile.json
src/: main.rs  shader.wgsl  sim_shader.wgsl  util_shader.wgsl
