[package]
name = "fluid_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = {version = "0.30.4", features = ["rwh_06"]}
bytemuck = {version = "1.13.1", features = ["derive"]}
wgpu = "22.1.0"
pollster = "0.3.0"
env_logger = "0.10.0"
log = "0.4.20"
ffmpeg-next = "7.1.0"

[profile.release]
debug = true